[gd_scene load_steps=9 format=2]

[ext_resource path="res://Machine/Machine.gd" type="Script" id=1]
[ext_resource path="res://Machine/Tube/Tube.tscn" type="PackedScene" id=2]
[ext_resource path="res://CustomResources/Theme/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://CustomResources/StyleBoxFlat/red.tres" type="StyleBox" id=4]
[ext_resource path="res://CustomResources/StyleBoxFlat/blue.tres" type="StyleBox" id=5]
[ext_resource path="res://CustomResources/StyleBoxFlat/wine.tres" type="StyleBox" id=6]
[ext_resource path="res://CustomResources/DynamicFont/ComfortaaBold-64.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=1]
resource_name = "ShowMessage"
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00774119, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Message:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container/Button:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7, 0.986338 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 448, 792 ), Vector2( 448, 396 ) ]
}

[node name="Machine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.152649
margin_bottom = 0.152649
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 688.0, 494.0, 302.0, 512.0 ]
}
tube2_value = 5
tube3_value = 1
goal = 6

[node name="Tween" type="Tween" parent="."]

[node name="Tube" parent="." instance=ExtResource( 2 )]
margin_left = 104.104
margin_top = 240.0
margin_right = 500.104
margin_bottom = 293.0
max_value = 120.0
value = 0.0
limit = 4

[node name="Tube2" parent="." instance=ExtResource( 2 )]
margin_left = 296.0
margin_top = 240.0
margin_right = 692.0
margin_bottom = 293.0
max_value = 120.0
value = 0.0
limit = 10

[node name="Tube3" parent="." instance=ExtResource( 2 )]
margin_left = 490.0
margin_top = 240.0
margin_right = 886.0
margin_bottom = 293.0
max_value = 120.0
value = 0.0
limit = 2

[node name="Fill" type="Button" parent="."]
margin_left = 262.0
margin_top = 476.0
margin_right = 342.0
margin_bottom = 540.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Llenar"

[node name="ChangeRed" type="Button" parent="."]
margin_left = 446.0
margin_top = 476.341
margin_right = 542.0
margin_bottom = 540.341
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Cambiar"

[node name="ChangeBlue" type="Button" parent="."]
margin_left = 640.0
margin_top = 476.341
margin_right = 736.0
margin_bottom = 540.341
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Cambiar"

[node name="RedLine" type="HSeparator" parent="."]
margin_left = 304.0
margin_top = 56.0
margin_right = 496.0
margin_bottom = 60.0
custom_styles/separator = ExtResource( 4 )

[node name="BlueLine" type="HSeparator" parent="."]
margin_left = 496.0
margin_top = 48.0
margin_right = 688.0
margin_bottom = 52.0
custom_styles/separator = ExtResource( 5 )

[node name="WineLine" type="HSeparator" parent="."]
margin_left = 264.0
margin_top = 462.0
margin_right = 340.0
margin_bottom = 466.0
custom_styles/separator = ExtResource( 6 )

[node name="RedSign" type="ColorRect" parent="."]
margin_left = 458.0
margin_top = 552.0
margin_right = 530.0
margin_bottom = 556.0
color = Color( 0, 0, 0, 1 )

[node name="BlueSign" type="ColorRect" parent="."]
margin_left = 652.0
margin_top = 552.0
margin_right = 724.0
margin_bottom = 554.0
color = Color( 0, 0, 0, 1 )

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="UIAnimations" type="AnimationPlayer" parent="UI"]
anims/ShowMessage = SubResource( 1 )

[node name="Container" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Overlay" type="ColorRect" parent="UI/Container"]
modulate = Color( 1, 1, 1, 0.00128317 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Message" type="Label" parent="UI/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 579.672
margin_bottom = 579.672
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "a WINNER is YOU!"
align = 1
valign = 1

[node name="Button" type="Button" parent="UI/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 491.885
margin_right = 80.0
margin_bottom = 555.885
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
text = "Siguiente nivel"

